--- a/app/src/main/res/layout/activity_team_list.xml
+++ b/app/src/main/res/layout/activity_team_list.xml
@@ -5,7 +5,7 @@
     android:id="@+id/mainContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".activities.MainActivity">
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/nav_view"
