made a start on favorite team fragment

--- a/app/src/main/res/layout/fragment_competition_list.xml
+++ b/app/src/main/res/layout/fragment_competition_list.xml
@@ -19,7 +19,7 @@
             android:text="@string/All_leagues"
             android:textSize="18sp"
             android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@+id/competitionsRv"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <android.support.v7.widget.RecyclerView
