--- a/app/src/main/res/layout/team_row.xml
+++ b/app/src/main/res/layout/team_row.xml
@@ -24,11 +24,11 @@
                 android:id="@+id/teamImageView"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-               android:layout_marginStart="16dp"
+                android:layout_marginStart="16dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_trophy" />
+                app:srcCompat="@drawable/ic_soccer_ball" />
 
             <TextView
                 android:id="@+id/teamTextView"
