--- a/app/src/main/res/layout/competition_row.xml
+++ b/app/src/main/res/layout/competition_row.xml
@@ -22,9 +22,11 @@
 
             <ImageView
                 android:id="@+id/competitionImageView"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="70dp"
+                android:layout_height="0dp"
                 android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
