--- a/app/src/main/res/layout/fragment_favorite_team.xml
+++ b/app/src/main/res/layout/fragment_favorite_team.xml
@@ -32,8 +32,12 @@
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/fragmentTitle" />
+            app:layout_constraintTop_toBottomOf="@+id/fragmentTitle"
+            app:layout_constraintVertical_bias="0.0">
+
+        </android.support.v7.widget.RecyclerView>
     </android.support.constraint.ConstraintLayout>
 
 </FrameLayout>
