clean up xml placeholders + added toasts

--- a/app/src/main/res/layout/favorite_team_row.xml
+++ b/app/src/main/res/layout/favorite_team_row.xml
@@ -29,8 +29,7 @@
                 android:layout_weight="1"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_soccer_ball" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/favoriteTeamNameTextView"
@@ -42,7 +41,6 @@
                 android:layout_marginBottom="8dp"
                 android:layout_weight="1"
                 android:gravity="center_vertical"
-                android:text="teamName"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/cardView2"
                 app:layout_constraintStart_toEndOf="@+id/favoriteTeamImageView"
