--- a/app/src/main/res/layout/competition_row.xml
+++ b/app/src/main/res/layout/competition_row.xml
@@ -29,15 +29,13 @@
                 android:layout_marginBottom="8dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_trophy" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/competitionNameTextView"
                 android:layout_width="115dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
-                android:text="competitionName"
                 android:textAlignment="viewEnd"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
