--- a/app/src/main/res/layout/team_row.xml
+++ b/app/src/main/res/layout/team_row.xml
@@ -27,15 +27,13 @@
                 android:layout_marginStart="16dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_soccer_ball" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/teamTextView"
                 android:layout_width="115dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
-                android:text="teamName"
                 android:textAlignment="viewEnd"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
