--- a/app/src/main/res/layout/event_row.xml
+++ b/app/src/main/res/layout/event_row.xml
@@ -79,15 +79,17 @@
                 app:layout_constraintStart_toEndOf="@+id/eventTimeTextView"
                 app:layout_constraintTop_toBottomOf="@+id/divider2" />
 
-            <ImageView
-                android:id="@+id/notificationIconImageView"
+            <CheckBox
+                android:id="@+id/notificationCheckBox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                android:text="CheckBox"
+                app:layout_constraintBottom_toTopOf="@+id/divider2"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_notifications_off_black_24dp" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <View
                 android:id="@+id/divider2"
