--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -31,7 +31,7 @@
             android:layout_marginTop="32dp"
             android:layout_marginEnd="64dp"
             android:backgroundTint="@color/colorPrimary"
-            android:text="CLEAR ALL SUBSCRIBED EVENTS"
+            android:text="@string/clear_all_subscribed_events"
             android:textColor="@android:color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -45,7 +45,7 @@
             android:layout_marginTop="24dp"
             android:layout_marginEnd="64dp"
             android:backgroundTint="@color/colorPrimary"
-            android:text="CLEAR ALL FAVORITE TEAMS"
+            android:text="@string/clear_all_favorite_teams"
             android:textColor="@android:color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
