--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,14 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_overview" />
+        android:id="@+id/navigation_competition"
+        android:icon="@drawable/ic_trophy"
+        android:title="@string/leagues" />
 
     <item
-        android:id="@+id/navigation_favorite_teams"
-        android:icon="@drawable/ic_favorite_black_24dp"
-        android:title="@string/title_favorite_teams" />
+        android:id="@+id/navigation_overview"
+        android:icon="@drawable/ic_home_black_24dp"
+        android:title="@string/title_overview" />
 
     <item
         android:id="@+id/navigation_settings"
